<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Preferences">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/preferencesLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferencesLogin" />

        <CheckBox
            android:id="@+id/preferencesBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferencesBack" />

        <CheckBox
            android:id="@+id/preferencesRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferencesRegister" />

        <Button
            android:id="@+id/savePreferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="register"
            android:text="@string/register" />

        <Button
            android:id="@+id/backPreferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="back"
            android:text="@string/btBack" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>